--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
         	<artifactId>junit</artifactId>
         	<version>4.11</version>
         </dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.11</version>
+		</dependency>
     </dependencies>
 
     <build>
