--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
 
     <name>Java EE 7 Hands-on Lab Solution</name>
 
+
+	<properties>
+    	<checkstyle.config.location>src/config/stqm_checks.xml</checkstyle.config.location>
+  	</properties>
+  
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
@@ -46,8 +51,8 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.1.1</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
@@ -78,13 +83,10 @@
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-checkstyle-plugin</artifactId>
 		        <version>2.17</version>
-		        <configuration>
-		          <configLocation>stqm_checks.xml</configLocation>
-		          <failOnViolation>true</failOnViolation>
-		        </configuration>
 		     </plugin>
         </plugins>
     </build>
 
+    <packaging>war</packaging>
 </project>
 
